menu/style.css
body {
	font-family: 'Open Sans', sans-serif;
	margin: 0 auto;
	max-width: 700px;
	font-size: 15px;
	background: #1b1b1e;
	color: white;
	text-align: center;
}

/* Header */
header {
	background: #1b1b1e;
	color: #fff;
	min-height: 40px;
	border-bottom: #d95d39 3px solid;
	position: fixed;
	top: 0;
	width: 700px;
}

header a {
	color: #fff;
	text-decoration: none;
	font-size: 16px;
}

header li {
	float: left;
	display: inline;
	padding: 0 20px;
}

header nav {
	float: right;
	margin: 10px 0;
}

header a:hover {
	color: #d95d39;
}

.active a {
	color: #d95d39;
}
/*header*/

h1 {
	font-family: 'Patua One', cursive;
	font-size: 50px;
	color: #d95d39;
	margin: 90px 0 10px 0;
}

h2 {
	font-size: 30px;
	color: #b5d2cb;
	margin: 15px 0;
}

h3 {
	font-size: 25px;
	font-family: Roboto Condensed;
	font-style: normal;
	margin: 0;
}

button {
	padding: 10px 25px;
	background-color: #FE4747;
	border: 1px solid black;
	font-size: 15px;
	color: white;
	border-radius: 8px;
	margin-top: 30px;
}

div {
	height: 200px;
	background-size: cover;
	background-position: center;
	border-radius: 12px;
	position: relative;
	/*margin-top: 40px;*/
	max-width: 500px;
	margin: 40px auto 0 auto;
}

p {
	color: white;
	background-color: rgba(0,0,0,.6);
	padding: 10px;
	margin: 0;
	font-size: 27px;
}

small {
	font-size: 15px;
}

/*hidden*/
p {
	position: absolute;
	bottom: 0;
	text-align: justify;
	height: 30px;
	transition: height .3s;
	-webkit-transition: height .3s;
  	-moz-transition: height .3s;
}

small {
	opacity: 0;
}
/*hidden*/

/*show*/
.show-description p {
	height: 140px;
}

.show-description small {
	opacity: 1;
}
/*show*/

.first {
	background-image: url("img/plain.jpg");
}

.second {
	background-image: url("img/bacon.jpg");
}

.third {
	background-image: url("img/special.jpg");
}

.price {
	float: right;
}

footer {
	margin: 100px 0 20px 0;
}

